k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-forth
  labels:
    app.kubernetes.io/part-of: joinquest-game
    joinquest.io/game-id: go-forth
